Projection (Specific Columns) & Alias, Select, Join

--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Department.cs" />
     <Compile Include="ec.cs" />
     <Compile Include="Employees.cs" />
     <Compile Include="Program.cs" />
